tests/NormalTests/paczka1/small_fuzzy/93451270.err
Error in line 4: 2MEo1pqYmD S805 13,86
Error in line 1: rCYtcKi4He A211 94,6
Error in line 11: 2MEo1pqYmD A211 48,0
Error in line 3: S663 S805 24,2
